...
  19: require('../../assets/illustrations/pregnancy-series/week-19/pregnancy-week-19-approved.webp'),
  20: require('../../assets/illustrations/pregnancy-series/week-20/pregnancy-week-20-anchor-approved.webp'),
  21: require('../../assets/illustrations/pregnancy-series/week-21/pregnancy-week-21-approved.webp'),
  22: require('../../assets/illustrations/pregnancy-series/week-22/pregnancy-week-22-approved.webp'),
  23: require('../../assets/illustrations/pregnancy-series/week-23/pregnancy-week-23-approved.webp'),
  24: require('../../assets/illustrations/pregnancy-series/week-24/pregnancy-week-24-approved.webp'),
  25: require('../../assets/illustrations/pregnancy-series/week-25/pregnancy-week-25-approved.webp'),
  26: require('../../assets/illustrations/pregnancy-series/week-26/pregnancy-week-26-approved.webp'),
  27: require('../../assets/illustrations/pregnancy-series/week-27/pregnancy-week-27-approved.webp'),
  28: require('../../assets/illustrations/pregnancy-series/week-28/pregnancy-week-28-approved.webp'),
  29: require('../../assets/illustrations/pregnancy-series/week-29/pregnancy-week-29-approved.webp'),
  30: require('../../assets/illustrations/pregnancy-series/week-30/pregnancy-week-30-approved.webp'),
  31: require('../../assets/illustrations/pregnancy-series/week-31/pregnancy-week-31-approved.webp'),
...
